Added platforms for games.
