# api/db/schema.rb
@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema[7.2].define(version: 2026_03_25_163801) do
+ActiveRecord::Schema[7.2].define(version: 2026_03_25_173218) do
   # These are extensions that must be enabled in order to support this database
   enable_extension "plpgsql"
 
@@ -89,9 +89,11 @@ ActiveRecord::Schema[7.2].define(version: 2026_03_25_163801) do
     t.bigint "base_game_id"
     t.datetime "created_at", null: false
     t.datetime "updated_at", null: false
+    t.bigint "platform_id"
     t.index ["base_game_id"], name: "index_games_on_base_game_id"
     t.index ["is_disabled"], name: "index_games_on_is_disabled"
     t.index ["name"], name: "index_games_on_name"
+    t.index ["platform_id"], name: "index_games_on_platform_id"
     t.index ["release_year"], name: "index_games_on_release_year"
   end
 
@@ -107,6 +109,17 @@ ActiveRecord::Schema[7.2].define(version: 2026_03_25_163801) do
     t.index ["game_id"], name: "index_links_on_game_id"
     t.index ["link_type"], name: "index_links_on_link_type"
     t.check_constraint "link_type::text = ANY (ARRAY['TRAILER'::character varying, 'LONGPLAY'::character varying, 'SPEEDRUN'::character varying, 'OTHER'::character varying]::text[])", name: "check_link_type_valid"
+  end
+
+  create_table "platforms", force: :cascade do |t|
+    t.string "name", null: false
+    t.string "slug", null: false
+    t.boolean "is_disabled", default: false, null: false
+    t.datetime "created_at", null: false
+    t.datetime "updated_at", null: false
+    t.index ["is_disabled"], name: "index_platforms_on_is_disabled"
+    t.index ["name"], name: "index_platforms_on_name"
+    t.index ["slug"], name: "index_platforms_on_slug", unique: true
   end
 
   create_table "reviews", force: :cascade do |t|
@@ -181,6 +194,7 @@ ActiveRecord::Schema[7.2].define(version: 2026_03_25_163801) do
   add_foreign_key "assets", "games", on_delete: :cascade
   add_foreign_key "game_rating_recalculations", "games", on_delete: :cascade
   add_foreign_key "games", "games", column: "base_game_id"
+  add_foreign_key "games", "platforms"
   add_foreign_key "links", "games", on_delete: :cascade
   add_foreign_key "reviews", "games", on_delete: :cascade
   add_foreign_key "reviews", "users", on_delete: :cascade
